@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2009-03-20  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/rgb.c: Compute the quantum type rather than using a
+        recurring conditional statement.  It turns out that the -endian
+        option is working as it should.
+
+</UL>
+<p>
 2009-03-16  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
